<resources>
    <string name="app_name">Amplify</string>
    <string name="forgot_password_heading">Reset Password</string>

    <!-- ********Log In Now*************-->
    <string name="login">Log in</string>
    <string name="submit">Submit</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <!-- ********Log In Now*************-->

    <!-- ********Feed Screen*************-->
    <string name="goal_setting_value">Enter value here</string>
    <string name="next_challenge_text">Next Challenge Starts</string>
    <string name="remaining">Remaining</string>
    <!-- ********Feed Screen*************-->


    <!-- ********Emoji Feedback*************-->
    <string name="challenge_journal_heading">Challenge Journal</string>
    <string name="challenge_journal_body">How do you feel today</string>
    <string name="tracking_mood_text">How do you feel today ?</string>
    <string name="frustrated_text">Frustrated</string>
    <string name="discouraged_text">Discouraged</string>
    <string name="content_text">Content</string>
    <string name="thrilled_text">Thrilled</string>
    <string name="whats_on_your_mind">What\'s on your mind ?</string>
    <string name="new_text">What\'s on your mind?</string>
    <string name="view_all">VIEW ALL</string>
    <!-- ********Emoji Feedback*************-->


    <!-- ********Forget Password*************-->
    <string name="frgt_your_pswrd">Forgot Your Password?</string>
    <string name="email_address">Type Your Email Address</string>
    <string name="reset">Reset Password</string>
    <!-- ********Forget Password*************-->

    <!-- ********Register Now*************-->
    <string name="register">Register for a new account</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_now_button_text">REGISTER NOW</string>
    <string name="terms_and_conditions">I have read and agree to the
        <u>Terms and Conditions</u> and <u>Privacy Policy</u>
    </string>
    <string name="registration">Register for a New Account</string>
    <string name="registration_popup">Congratulations!!</string>
    <string name="registration_popup_message">You have successfully registered as a new user</string>
    <!-- ********Register Now*************-->


    <!-- ********Edit profile*************-->
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="member_since">Member Since</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="time_zone">Time Zone</string>
    <string name="studio">Studio</string>
    <string name="group">Group</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_image">****</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unit">Unit</string>
    <string name="faq">FAQ</string>
    <string name="about">About</string>
    <string name="introduction">Challenge Introduction</string>
    <string name="account">Account</string>
    <string name="my_messaging">My Messages</string>
    <string name="policy">Privacy Policy</string>
    <string name="condition">Terms and Conditions</string>
    <string name="version">App Version</string>
    <string name="workouts">Home Workouts</string>
    <string name="plans">Cardio Plans</string>
    <string name="list">Shopping List</string>
    <string name="schedule">Schedule Classes</string>
    <string name="buy">Buy Classes</string>
    <string name="log_out">Log Out</string>
    <string name="Health_Tips">Health Tips</string>
    <string name="meal_plan_head">Meal</string>
    <string name="nutrition">Nutrition</string>
    <string name="forum">Community</string>

    <!-- ********Edit profile*************-->


    <!-- ********Change Password*************-->
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify">Verify</string>
    <string name="mainstream">Mainstream</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="award_popup">100% day point achievement</string>
    <string name="recipe_library">Recipe Library</string>
    <!-- ********Change Password*************-->

    <string name="global_male">GLOBAL MALE</string>
    <string name="global_female">GLOBAL FEMALE</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="identify_as_male">Identify as Male</string>
    <string name="identify_as_female">Identify as Female</string>
    <string name="unspecified">Unspecified/Non-binary</string>
    <string name="other">Unspecified</string>
    <string name="my_campaigns">My Campaigns</string>
    <string name="my_challenges">My Challenges</string>
    <string name="upcomings_challenges_and_campaigns">Upcoming Challenges and Campaigns</string>
    <string name="actives_challenges_and_campaigns">Active Challenges and Campaigns</string>
    <string name="challenges_list">Challenge List</string>
    <string name="no_heading">No Campaign Found</string>
    <string name="campaign_list">Campaign List</string>
    <string name="challenge_not_found">No Challenge Found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challenges">Challenges</string>
    <string name="campaigns">Campaigns</string>
    <string name="participate">PARTICIPATE</string>
    <string name="participation_text">Do you want to participate in the challenge/campaign?</string>
    <string name="dialog_text"><b>You first have to participate in the Challenge, then you will be able to update the weights.\n\n To Participate in the current challenge, you can do that from the Feed Tab or from Active Challenges.</b></string>
    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="view_history">View History</string>
    <string name="select_classes">Select Classes</string>
    <string name="update">Update</string>
    <string name="update_goals">Update Goals</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="reset_text">Reset</string>
    <string name="minute_text">Please Enter Minute(s)</string>
    <string name="expire_text">This Event is not Active</string>
    <string name="no_active_text">No Upcoming Challenge Or Campaign</string>


    <string name="hint_minute">Enter Minute(s)</string>
    <string name="message_minutes">Please Enter Minutes...</string>
    <string name="welcome">Welcome to the 30 Day Challenge!</string>
    <string name="unique_password">Forgot your password? We sent you a unique password to the email address you
        used to sign up for the 30 Day Challenge.</string>
    <string name="reg">REGISTER</string>
    <string name="log_in">LOGIN</string>
    <string name="chal_1">Challenge</string>
    <string name="age_range">Age Range</string>
    <string name="edit_other">Other</string>
    <string name="prefer">Prefer not to say</string>
    <string name="user_name">Username</string>
    <string name="health_and_wellness_blogs">Health and Wellness Blogs</string>

    <string name="new_version_available">A new version of Amplify is available. We recommend you to update your app.</string>
</resources>
