<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ForgotPasswordTheme"
    tools:context="com.studio.amplify.activity.ChangePasswordActivity">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerLayout"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/sign_up_padding"
            android:layout_marginStart="@dimen/sign_up_padding"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:fontFamily="@font/aileron_regular_webfont"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textToVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/holo_red_dark" />

            <!-- <ImageView
                 android:id="@+id/imageCheck"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="16dp"
                 android:layout_alignParentEnd="true"/>-->

            <LinearLayout
                android:id="@+id/rootLLForChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLayout"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/resetPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passwordLayout">

                    <EditText
                        android:id="@+id/etNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/aileron_regular_webfont"
                        android:hint="@string/new_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_text_size" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resetPasswordLayout">

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/aileron_regular_webfont"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="@dimen/common_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@color/black"
                    android:layout_below="@+id/confirmPasswordLayout"/>

                <!--<Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/confirmPasswordLayout"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/aileron_bold_webfont"
                    android:background="@color/white"
                    android:text="@string/submit"
                    android:textColor="@color/black"
                    android:textSize="16sp" />-->
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
