<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/forgot_password_background">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/header_layout" />
    <!--android:scrollbars="none"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerLayout"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/sign_up_padding"
            android:layout_marginStart="@dimen/sign_up_padding">

            <ImageView
                android:id="@+id/imgForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/forgotpass_ico" />

            <TextView
                android:id="@+id/tvForgetYourPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgForgot"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aileron_regular_webfont"
                android:text="@string/frgt_your_pswrd"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                android:layout_marginTop="35dp"
                app:hintTextColor="@color/black"
                style="@style/InputLayoutStyle"
                android:layout_below="@+id/tvForgetYourPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etForgotEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/aileron_regular_webfont"
                    android:hint="Type Your Email Address"
                    android:layout_gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:tag="Please enter email."
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>


            <!--<com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvForgetYourPassword"
                android:layout_marginTop="50dp">

                <EditText
                    android:id="@+id/etForgotEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/email_address"
                    android:imeOptions="actionDone"
                    android:fontFamily="@font/aileron_regular_webfont"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>
-->

            <TextView
                android:id="@+id/tvUniquePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aileron_bold_webfont"
                android:gravity="center"
                android:text="@string/unique_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_below="@+id/passwordLayout"/>


           <TextView
               android:id="@+id/btnSubmit"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_below="@+id/tvUniquePass"
               android:layout_gravity="center"
               android:gravity="center"
               android:layout_marginTop="30dp"
               android:fontFamily="@font/aileron_bold_webfont"
               android:background="@color/white"
               android:text="@string/submit"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:focusable="true"/>

            <!--<Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLayout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aileron_bold_webfont"
                android:background="@color/white"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:focusable="true"/>-->

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
